Refactor: 주석 추가, 리스트 변환 로직 개선
- Collectors 사용 제거하여 수정 불가능한 리스트를 반환(불변성)
- tc 통과 확인
- booking DB는 쓰기용이므로 Controller 조회 생략